--- a/UeProject/Config/DefaultEngine.ini
+++ b/UeProject/Config/DefaultEngine.ini
@@ -24,3 +24,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Insight")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Insight")
 
+[/Script/Engine.RendererSettings]
+r.AllowGlobalClipPlane=True
+r.ReflectionCaptureResolution=256
+
